# prophyle

./: .codecov.yml  .coveragerc  .editorconfig  .flake8  .gitignore  .gitmodules  .pylintrc  .pyup.yml  .style.yapf  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  README.rst  _upload_pypi.sh  increment_version.py  instruction_for_developers.md  instructions_for_developers.md  main.cpp  prophyle.sh  readme.md  readme.rst  readthedocs.yml  requirements.txt  setup.py  test1_index.sh  test2_classify.sh  test2_match.sh  test3_analyze.sh  test_index.sh  test_match.sh  trees  upload_pypi.sh
.github/workflows/: ci.yaml  codecov.yml  codeql-analysis.yml  codeql.yml  publish-docs.yml  publish-pypi.yml  read-the-docs.yml  release-please.yml  testing.yml
cython_fasta/: cfib.cpp  compile.sh  wrap_fib.pyx
deprec/assembly_cpp/: CMakeLists.txt  main.cpp
deprec/build_index__first_python_prototype/: .gitignore  build_index.py  metag.py
deprec/cython_fasta_experiments/: .gitignore  cfib.h  setup.py
deprec/krakendb_old_code/: fast_converter.cpp
deprec/rrr_sdsl/: klcp.txt  random.txt  test.cpp
deprec/test02_match_all_kmers/: Makefile  diff.2.txt  exk_output.2.txt  index.fa  index.fa.amb  index.fa.ann  index.fa.pac  kmers_expected.2.txt  kmers_matched.2.txt  log_file
docs/: .gitignore  Makefile  analyze.rst  classification.rst  classify.rst  cli.rst  compress.rst  conf.py  contents.rst  custom_db.rst  databases.rst  databases_custom.rst  databases_predefined.rst  example.rst  formats.rst  index.rst  install.rst  introduction.rst  ncbi_db.rst  other_information.rst  profile.rst  reference.rst  requirements.rst  similarity.rst  standard_db.rst  tutorial.md  tutorial.rst  tutorials.rst  version.py
docs/.static/: prophyle.css
docs/.templates/: page.html
docs/_templates/: index.html  indexsidebar.html
docs/deprec/: analyze.rst
docs/reference/: Makefile  analyze.txt  classify.txt  compile.txt  compress.txt  decompress.txt  download.txt  index.rst  index.txt  init.txt  main.txt  profile.txt  prophyle_analyze.py.txt  prophyle_assembler.txt  prophyle_assignment.py.txt  prophyle_assignment.txt  prophyle_classify_index.py.txt  prophyle_index.txt  prophyle_index_build.txt  prophyle_index_query.txt  prophyle_ncbi_tree.py.txt  prophyle_oldrefseq.py.txt  prophyle_otu_table.py.txt  prophyle_paired_end.py.txt  prophyle_parse_rpt.py.txt  prophyle_plot_tree.py.txt  prophyle_profile.py.txt  prophyle_propagation_makefile.py.txt  prophyle_propagation_postprocessing.py.txt  prophyle_propagation_preprocessing.py.txt  prophyle_rnfsim.py.txt  prophyle_sim_matrix.py.txt  prophyle_split_allseq.py.txt  prophyle_validate_tree.py.txt  save_help.sh  similarity.txt
docs/tutorials/: default_db.rst  index.rst  install.rst  ncbi_db.rst
examples/mycobacterium/: .gitignore  1_build_index.sh
examples/sparc/: .gitignore  1_build_index.sh  1_download_data.sh  2_build_index.sh  3_assign_reads.sh  build_sparc_index.sh  isolates.2015.tsv
experiments/: .gitignore  Makefile  Makefile.experiment  experiment.mk  readme.md  run_serial.sh  view_logs.sh  view_logs_md.sh  view_rpms.sh
experiments/01_1from10_bacteria_bin_k31/: params.mk
experiments/01_1from10_bin_k31/: params.mk
experiments/02_1from10_bin_k31/: run.sh
experiments/1from10_k10/: run.sh
ext/: Makefile
ext/time/: .gitignore  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.in  error.c  port.h  resuse.c  resuse.h  time.c  time.info  time.texi  version.c  version.texi  wait.h
fasta_libraries/: .gitignore
kraken-db/: converter.cpp
paper/: main.tex  outline.md
proc/: .gitignore  CMakeLists.txt  main.cpp
proc/cmake-ext/: .gitignore  gatbcore.cmake  klib.cmake
proc/contrib/: .gitignore  gatbcore.cmake
prophyle/: 1step_match.py  Makefile  __commit.py  _all_kmers.py  _awk_assembly_summary.sh  _fa_norm.py  _fa_to_kmers.py  assignment.py  build_taxonomic_tree.py  bwa  commit.py  contig_statistics.py  create_final_fasta.py  get_nb_jobs.mk  increment_version.py  newick2makefile.py  prophyle  prophyle.py  prophyle_analyze.py  prophyle_assignment.py  prophyle_classify_index.py  prophyle_classify_snakefile  prophyle_contig_statistics.py  prophyle_enet_abundance.py  prophyle_enet_statsmodel_abundance.py  prophyle_kmer_annotations.py  prophyle_merge_fa.py  prophyle_merge_trees.py  prophyle_ncbi_tree.py  prophyle_ncbitree.py  prophyle_oldrefseq.py  prophyle_otu_table.py  prophyle_paired_end.py  prophyle_paired_reads.py  prophyle_parse_rpt.py  prophyle_plot_tree.py  prophyle_profile.py  prophyle_profile_em.py  prophyle_propagation_makefile.py  prophyle_propagation_postprocessing.py  (+13 more)
python_variant/: .gitignore  id_tree_bin.newick  metag.py  test_tree.py
reads/: .gitignore  Makefile  readme.md
scripts/: .gitignore  create_final_fasta.py  download_bacteria_library.sh
src/: .gitignore  Makefile  build_index.py  newick2makefile.py  tree_formatter.py
src/assembler/: .gitignore  CMakeLists.txt  Makefile  main.cpp  run.sh  test_run.sh
src/assembler/cmake-ext/: zlib.cmake
src/assembler/tools/: verify_output.py
src/kmer-index/: .gitignore  CMakeLists.txt  Makefile  Makefile.exk  Makefile.exk2  bitarray.c  bitarray.h  bwautils.c  bwautils.h  bwtexk.c  bwtexk.h  contig_node_translator.c  contig_node_translator.h  exkutils.h  klcp.c  klcp.h
src/kmer-index/test/: Makefile  query.fa  ref.fa  run.sh  testkmer.fq  testref.fa  testref.fa.amb  testref.fa.ann  testref.fa.bwt  testref.fa.pac  testref.fa.sa
tests/: .gitignore  Borrelia_garinii.fa  Makefile  conf.mk  readme.md  simulation_bacteria.1000.fq  test.fa.REMOVED.git-id  test_exk.sh
texts/: .gitignore  Makefile  lcp_construction.tex
trees/: 1from10.bacteria.bin.newick  1from10.bacteria.orig.newick  1from10.bin.newick  1from10.hmp.orig.newick  1from10.plasmids.orig.newick  1from10.viruses.orig.newick  bacteria.bin.newick  bacteria.nw  bacteria.orig.newick  id_tree.orig.newick  mini.hmp.newick  minihmp.newick  plasmids.orig.newick  test_bacteria_bin.nw  test_hmp.nw  test_plasmids.nw  test_viruses.nw  viruses.orig.newick
(+440 files in other folders)
